fix contrast in carousel for hover state and text

--- a/src/components/carousel/styles.scss
+++ b/src/components/carousel/styles.scss
@@ -55,7 +55,7 @@
 }
 
 .overlay {
-  background: rgba(black, 0.3);
+  background: rgba(black, 0.7);
   width: 80%;
   height: 50%;
   display: flex;
